docs/release2/evidence/P6/p6-firewall-post-apply-validation.txt
============================================================
Timestamp
============================================================
2026-05-05 13:07:20 +01:00

============================================================
Git status
============================================================
?? "docs/release2/evidence/P6/Screenshot 2026-05-05 130344.png"
?? "docs/release2/evidence/P6/Screenshot 2026-05-05 130405.png"
?? "docs/release2/evidence/P6/Screenshot 2026-05-05 130449.png"
?? docs/release2/evidence/P6/p6-failed-apply-partial-state.txt

============================================================
Azure Firewall
============================================================
{
  "additionalProperties": {},
  "applicationRuleCollections": [],
  "etag": "W/\"520afcec-e74d-4005-a13c-59f9b998b651\"",
  "firewallPolicy": {
    "id": "/subscriptions/8d99637c-13e7-417c-b334-b586d0ddc3d6/resourceGroups/rg-connectivity-prod-norwayeast/providers/Microsoft.Network/firewallPolicies/afwp-dev-norwayeast",
    "resourceGroup": "rg-connectivity-prod-norwayeast"
  },
  "id": "/subscriptions/8d99637c-13e7-417c-b334-b586d0ddc3d6/resourceGroups/rg-connectivity-prod-norwayeast/providers/Microsoft.Network/azureFirewalls/afw-dev-norwayeast-01",
  "ipConfigurations": [
    {
      "etag": "W/\"520afcec-e74d-4005-a13c-59f9b998b651\"",
      "id": "/subscriptions/8d99637c-13e7-417c-b334-b586d0ddc3d6/resourceGroups/rg-connectivity-prod-norwayeast/providers/Microsoft.Network/azureFirewalls/afw-dev-norwayeast-01/azureFirewallIpConfigurations/configuration",
      "name": "configuration",
      "privateIPAddress": "10.0.1.4",
      "provisioningState": "Succeeded",
      "publicIPAddress": {
        "id": "/subscriptions/8d99637c-13e7-417c-b334-b586d0ddc3d6/resourceGroups/rg-connectivity-prod-norwayeast/providers/Microsoft.Network/publicIPAddresses/pip-azfw-norwayeast-01",
        "resourceGroup": "rg-connectivity-prod-norwayeast"
      },
      "resourceGroup": "rg-connectivity-prod-norwayeast",
      "subnet": {
        "id": "/subscriptions/8d99637c-13e7-417c-b334-b586d0ddc3d6/resourceGroups/rg-connectivity-prod-norwayeast/providers/Microsoft.Network/virtualNetworks/vnet-dev-norwayeast-hub/subnets/AzureFirewallSubnet",
        "resourceGroup": "rg-connectivity-prod-norwayeast"
      },
      "type": "Microsoft.Network/azureFirewalls/azureFirewallIpConfigurations"
    }
  ],
  "location": "norwayeast",
  "name": "afw-dev-norwayeast-01",
  "natRuleCollections": [],
  "networkRuleCollections": [],
  "provisioningState": "Succeeded",
  "resourceGroup": "rg-connectivity-prod-norwayeast",
  "sku": {
    "name": "AZFW_VNet",
    "tier": "Standard"
  },
  "tags": {
    "CostCenter": "Lab-123",
    "DeploymentMethod": "Terraform",
    "Environment": "Development",
    "Owner": "HASHIBUR RAHMAN",
    "Project": "Azawslab-Release2"
  },
  "threatIntelMode": "Alert",
  "type": "Microsoft.Network/azureFirewalls"
}

============================================================
Azure Firewall Policy
============================================================
{
  "childPolicies": [],
  "etag": "8a333b87-7fd3-4600-9130-27b238f04596",
  "firewalls": [
    {
      "id": "/subscriptions/8d99637c-13e7-417c-b334-b586d0ddc3d6/resourceGroups/rg-connectivity-prod-norwayeast/providers/Microsoft.Network/azureFirewalls/afw-dev-norwayeast-01",
      "resourceGroup": "rg-connectivity-prod-norwayeast"
    }
  ],
  "id": "/subscriptions/8d99637c-13e7-417c-b334-b586d0ddc3d6/resourceGroups/rg-connectivity-prod-norwayeast/providers/Microsoft.Network/firewallPolicies/afwp-dev-norwayeast",
  "location": "norwayeast",
  "name": "afwp-dev-norwayeast",
  "provisioningState": "Succeeded",
  "resourceGroup": "rg-connectivity-prod-norwayeast",
  "ruleCollectionGroups": [
    {
      "id": "/subscriptions/8d99637c-13e7-417c-b334-b586d0ddc3d6/resourceGroups/rg-connectivity-prod-norwayeast/providers/Microsoft.Network/firewallPolicies/afwp-dev-norwayeast/ruleCollectionGroups/rcg-p6-validation",
      "resourceGroup": "rg-connectivity-prod-norwayeast"
    }
  ],
  "sku": {
    "tier": "Standard"
  },
  "tags": {
    "CostCenter": "Lab-123",
    "DeploymentMethod": "Terraform",
    "Environment": "Development",
    "Owner": "HASHIBUR RAHMAN",
    "Project": "Azawslab-Release2"
  },
  "threatIntelMode": "Alert",
  "type": "Microsoft.Network/FirewallPolicies"
}

============================================================
Azure Firewall Public IP
============================================================
{
  "ddosSettings": {
    "protectionMode": "VirtualNetworkInherited"
  },
  "etag": "W/\"0b243b48-d9b7-42b9-88d9-68b7dad6bd32\"",
  "id": "/subscriptions/8d99637c-13e7-417c-b334-b586d0ddc3d6/resourceGroups/rg-connectivity-prod-norwayeast/providers/Microsoft.Network/publicIPAddresses/pip-azfw-norwayeast-01",
  "idleTimeoutInMinutes": 4,
  "ipAddress": "20.100.184.232",
  "ipConfiguration": {
    "id": "/subscriptions/8d99637c-13e7-417c-b334-b586d0ddc3d6/resourceGroups/rg-connectivity-prod-norwayeast/providers/Microsoft.Network/azureFirewalls/afw-dev-norwayeast-01/azureFirewallIpConfigurations/configuration",
    "resourceGroup": "rg-connectivity-prod-norwayeast"
  },
  "ipTags": [],
  "location": "norwayeast",
  "name": "pip-azfw-norwayeast-01",
  "provisioningState": "Succeeded",
  "publicIPAddressVersion": "IPv4",
  "publicIPAllocationMethod": "Static",
  "resourceGroup": "rg-connectivity-prod-norwayeast",
  "resourceGuid": "17b2e534-0a7f-4533-abbb-31a683729ebc",
  "sku": {
    "name": "Standard",
    "tier": "Regional"
  },
  "tags": {
    "CostCenter": "Lab-123",
    "DeploymentMethod": "Terraform",
    "Environment": "Development",
    "Owner": "HASHIBUR RAHMAN",
    "Project": "Azawslab-Release2"
  },
  "type": "Microsoft.Network/publicIPAddresses"
}

============================================================
Workload Route Table
============================================================
{
  "disableBgpRoutePropagation": false,
  "etag": "W/\"e859f593-b54e-42fa-a5f5-d1120e0dae27\"",
  "id": "/subscriptions/8d99637c-13e7-417c-b334-b586d0ddc3d6/resourceGroups/rg-dev-workload-norwayeast/providers/Microsoft.Network/routeTables/rt-workload-to-hub-norwayeast",
  "location": "norwayeast",
  "name": "rt-workload-to-hub-norwayeast",
  "provisioningState": "Succeeded",
  "resourceGroup": "rg-dev-workload-norwayeast",
  "resourceGuid": "626248cf-5f59-4c9c-a848-75bb93476058",
  "routes": [
    {
      "addressPrefix": "0.0.0.0/0",
      "etag": "W/\"e859f593-b54e-42fa-a5f5-d1120e0dae27\"",
      "hasBgpOverride": false,
      "id": "/subscriptions/8d99637c-13e7-417c-b334-b586d0ddc3d6/resourceGroups/rg-dev-workload-norwayeast/providers/Microsoft.Network/routeTables/rt-workload-to-hub-norwayeast/routes/route-default-to-azure-firewall",
      "name": "route-default-to-azure-firewall",
      "nextHopIpAddress": "10.0.1.4",
      "nextHopType": "VirtualAppliance",
      "provisioningState": "Succeeded",
      "resourceGroup": "rg-dev-workload-norwayeast",
      "type": "Microsoft.Network/routeTables/routes"
    }
  ],
  "subnets": [
    {
      "id": "/subscriptions/8d99637c-13e7-417c-b334-b586d0ddc3d6/resourceGroups/rg-dev-workload-norwayeast/providers/Microsoft.Network/virtualNetworks/vnet-dev-norwayeast-spoke-workload/subnets/snet-workload",
      "resourceGroup": "rg-dev-workload-norwayeast"
    }
  ],
  "tags": {
    "CostCenter": "Lab-123",
    "DeploymentMethod": "Terraform",
    "Environment": "Development",
    "Owner": "HASHIBUR RAHMAN",
    "Project": "Azawslab-Release2"
  },
  "type": "Microsoft.Network/routeTables"
}

============================================================
Workload Subnet Route Association
============================================================
{
  "addressPrefix": "10.10.0.0/24",
  "defaultOutboundAccess": true,
  "delegations": [],
  "etag": "W/\"b22de7ee-46cf-44e2-9a53-0a3fd309e345\"",
  "id": "/subscriptions/8d99637c-13e7-417c-b334-b586d0ddc3d6/resourceGroups/rg-dev-workload-norwayeast/providers/Microsoft.Network/virtualNetworks/vnet-dev-norwayeast-spoke-workload/subnets/snet-workload",
  "ipConfigurations": [
    {
      "id": "/subscriptions/8d99637c-13e7-417c-b334-b586d0ddc3d6/resourceGroups/RG-DEV-WORKLOAD-NORWAYEAST/providers/Microsoft.Network/networkInterfaces/NIC-VM-DEV-CLIENT-01-01/ipConfigurations/INTERNAL",
      "resourceGroup": "RG-DEV-WORKLOAD-NORWAYEAST"
    }
  ],
  "name": "snet-workload",
  "privateEndpointNetworkPolicies": "Disabled",
  "privateLinkServiceNetworkPolicies": "Enabled",
  "provisioningState": "Succeeded",
  "resourceGroup": "rg-dev-workload-norwayeast",
  "routeTable": {
    "id": "/subscriptions/8d99637c-13e7-417c-b334-b586d0ddc3d6/resourceGroups/rg-dev-workload-norwayeast/providers/Microsoft.Network/routeTables/rt-workload-to-hub-norwayeast",
    "resourceGroup": "rg-dev-workload-norwayeast"
  },
  "serviceEndpoints": [],
  "type": "Microsoft.Network/virtualNetworks/subnets"
}

============================================================
Platform Networking Terraform Outputs
============================================================
azure_firewall_default_route_id = "/subscriptions/8d99637c-13e7-417c-b334-b586d0ddc3d6/resourceGroups/rg-dev-workload-norwayeast/providers/Microsoft.Network/routeTables/rt-workload-to-hub-norwayeast/routes/route-default-to-azure-firewall"
azure_firewall_id = "/subscriptions/8d99637c-13e7-417c-b334-b586d0ddc3d6/resourceGroups/rg-connectivity-prod-norwayeast/providers/Microsoft.Network/azureFirewalls/afw-dev-norwayeast-01"
azure_firewall_policy_id = "/subscriptions/8d99637c-13e7-417c-b334-b586d0ddc3d6/resourceGroups/rg-connectivity-prod-norwayeast/providers/Microsoft.Network/firewallPolicies/afwp-dev-norwayeast"
azure_firewall_private_ip_address = "10.0.1.4"
azure_firewall_public_ip_id = "/subscriptions/8d99637c-13e7-417c-b334-b586d0ddc3d6/resourceGroups/rg-connectivity-prod-norwayeast/providers/Microsoft.Network/publicIPAddresses/pip-azfw-norwayeast-01"
connectivity_resource_group_name = "rg-connectivity-prod-norwayeast"
hub_vnet_id = "/subscriptions/8d99637c-13e7-417c-b334-b586d0ddc3d6/resourceGroups/rg-connectivity-prod-norwayeast/providers/Microsoft.Network/virtualNetworks/vnet-dev-norwayeast-hub"
hub_vnet_name = "vnet-dev-norwayeast-hub"
workload_route_table_id = "/subscriptions/8d99637c-13e7-417c-b334-b586d0ddc3d6/resourceGroups/rg-dev-workload-norwayeast/providers/Microsoft.Network/routeTables/rt-workload-to-hub-norwayeast"
